# SuperExpenses

./: manage.py  pyproject.toml
expenses/: admin.py  models.py  urls.py  views.py
expenses/management/commands/: create_fake_expenses.py
expenses/migrations/: 0001_initial.py  0002_expense_description.py  0003_category_expense_category.py  0004_expense_more_data.py
expenses/templates/expenses/: expense_detail.html  expense_list.html
super_expenses/: asgi.py  settings.py  urls.py  wsgi.py
