[tool.poetry]
name = "superexpenses"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Django = "^5.0.3"
ipython = "^8.22.2"
django-pytest = "^0.2.0"
django-extensions = "^3.2.3"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
